--- a/dependencies2/build.gradle
+++ b/dependencies2/build.gradle
@@ -21,8 +21,13 @@ kotlin {
         commonMain {
             dependencies {
                 implementation(project(":dependencies"))
-                implementation(project(":dependencies2"))
             }
         }
+    }
+}
+
+tasks.named("compileKotlinJs") {
+    it.kotlinOptions {
+        freeCompilerArgs += "-Xklib-enable-signature-clash-checks=false"
     }
 }
