--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,11 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+        mavenLocal()
+    }
+}
+
 rootProject.name = 'repro-deep-copy-function'
 include 'repro:kotlin-plugin'
 include 'dependencies'
