--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.8.0'
+//    id 'org.jetbrains.kotlin.jvm' version '1.9.20-Beta'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.233-SNAPSHOT'
 }
 
 allprojects {
@@ -7,12 +8,6 @@ allprojects {
         mavenLocal()
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
+        mavenLocal()
     }
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
 }
