--- a/integration/build.gradle
+++ b/integration/build.gradle
@@ -23,5 +23,10 @@ kotlin {
                 implementation(project(":dependencies"))
             }
         }
+        commonTest {
+            dependencies {
+                implementation(kotlin("test"))
+            }
+        }
     }
 }
