--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ allprojects {
         mavenLocal()
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://maven.pkg.jetbrains.space/kotlin/p/kotlin/dev" }
         mavenLocal()
     }
 }
