--- a/dependencies/build.gradle
+++ b/dependencies/build.gradle
@@ -11,6 +11,9 @@ kotlin {
     js(IR) {
         browser()
     }
+    wasmJs() {
+        browser()
+    }
     jvm()
     mingwX64()
     linuxX64()
