--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 //    id 'org.jetbrains.kotlin.jvm' version '2.0.0-Beta1'
-//    id 'org.jetbrains.kotlin.jvm' version '2.0.0-Beta2'
-    id 'org.jetbrains.kotlin.jvm' version '1.9.20'
+    id 'org.jetbrains.kotlin.jvm' version '2.0.0-Beta2'
+//    id 'org.jetbrains.kotlin.jvm' version '1.9.20'
 }
 
 allprojects {
