Add reproducer and metadata dumps

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-//    id 'org.jetbrains.kotlin.jvm' version '1.9.20-Beta'
-    id 'org.jetbrains.kotlin.jvm' version '1.9.233-SNAPSHOT'
+//    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
+    id 'org.jetbrains.kotlin.jvm' version '2.0.0-Beta3'
 }
 
 allprojects {
